<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_agents">

    <fragment
        android:id="@+id/navigation_agents"
        android:name="com.amjad.valguide.ui.agents.AgentsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_agents" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.amjad.valguide.ui.guns.GunsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_guns" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.amjad.valguide.ui.maps.MapsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_maps" />
</navigation>